feat: add account registration and login
